# SudokuSolver

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD  environment.bat  environment.sh  input04.txt  install_dependencies.bat  install_dependencies.sh  readme.txt  sudoku.cpp
assets/: hard_puzzle01.txt  input05.txt
cmake/: SudokuSolverCmakeConfiguration.h.in
src/: CMakeLists.txt  SpaceStationContainer.cpp  SudokuCell.h  SudokuPuzzle.cpp  SudokuPuzzle.h  main.cxx  main_deprecated.cpp
src/SpaceStation/: CMakeLists.txt  IThruster.h  MockThruster.h  Thruster.cpp  Thruster.h
src/SpaceStation/Test/: CMakeLists.txt
src/SpaceStation/Test/Thruster/: CMakeLists.txt  TestSpaceStation.cpp  TestThruster.cpp
src/SudokuSolver/: CMakeLists.txt  I_SudokuCell.h  I_SudokuPuzzle.h  I_SudokuPuzzleValidator.h  MockSudokuCell.cpp  MockSudokuCell.h  SpaceStationContainer.cpp  SudokuCell.cpp  SudokuCell.h  SudokuCellValue.h  SudokuPuzzle.cpp  SudokuPuzzle.h  SudokuPuzzleValidator.cpp  SudokuPuzzleValidator.h
src/SudokuSolver/Test/: CMakeLists.txt  SudokuPuzzleTest.cpp  TestSudokuPuzzle.cpp
src/SudokuSolver/Test/SudokuCell/: CMakeLists.txt  TestSudokuCell.cpp
src/SudokuSolver/Test/SudokuPuzzle/: CMakeLists.txt  TestSudokuPuzzle.cpp
src/SudokuSolver/Test/SudokuPuzzleValidator/: CMakeLists.txt  TestSudokuPuzzleValidator.cpp
sudokuProblems/: input03.txt  input04.txt  input05.txt
test/: CMakeLists.txt  TestSudokuPuzzle.cpp
tools/: build_current_directory.py
